# personal_finance_app

./: LICENSE  analisa_df.ipynb  data_extractor.py  main.py  pyproject.toml  utils.py  ux.py
bd/: extrato_bancario_base.csv
