[project]
name = "personal-finance-app"
version = "0.1.0"
description = "MIT"
authors = [
    {name = "Gabriel de Freitas Moreira",email = "gabriel.defreitasmoreira@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.9"
mypy = "^1.17.1"
pytest = "^8.4.1"
ipykernel = "^6.30.1"

